### Version 1.0.0
- ProcessVersionConstType (Changed)
    - Updated const to version number 1.0.0
- BusinessRelationPersonType (Changed)
    - Added new enum value "Other person mentioned by name"

### Version 0.6.0
- DisabilityCapitalProgressionType (Changed)
    - removed enum value 'None'
- DSBInsuranceOptionsType (Changed)
    - renamed "renunciationBenefitReductionsNegligence" to "waiverBenefitGrossNegligence"
- DSBMCoverageType (Changed)
    - Change type from array to object
- DSBPCoverageType (Changed)
    - Change type from array to object
- DSBPersonType (Changed)
    - renamed property "fixedPayroll" to "payroll"
- OfferRequestUVGOType (Changed)
    - Renamed "personGroup" to "personGroups"
- OfferUVGOType (Changed)
    - Renamed "personGroup" to "personGroups"
    - Renamed "netPremiumUVGTotal" to "netPremiumTotal"
- OptionalPensionSalaryType (Added)
- ProcessVersionConstType (Changed)
    - adjusted const to new version number
- UVGOPersonGroupType (Changed)
    - renamed property "coverage" to "insuranceType"
- UVGOPersonPremiumType (Added)
- UVGOPersonType (Changed)
    - splitted properties of "premiumPersonMentionedByName" into premiumOA and premiumNOA
- UVGZCoverageType (Changed)
    - renamed "survivorsPartnerPension" to "survivorsPartnerPensionBenefitPeriod" and changed the type
    - changed type of "survivorsPartnerPensionUVGSalary" to "OptionalPensionSalaryType"
    - changed type of "survivorsPartnerPensionSurplusSalary" to "OptionalPensionSalaryType"
- UVGZInsuranceOptionsType (Changed)
    - renamed property "endInsuranceCoverCoorindationUVG" to "endInsuranceCoverCoordinationUVG"
- UVGZPersonType (Changed)
    - renamed property "fixedPayroll" to "payroll"
- UVGZPremiumType (Changed)
    - Removed property "disabilityPensionSalarySurplusPremiumRate"
    - Added property "leftbehindPensionSalarySurplusPremiumRate"
    - Renamed "survivorsPensionSalaryPremiumRateUVGSalary" to "survivorsPartnerPensionSalaryPremiumRateUVGSalary"